# python-design-pattern

./: .gitignore  makefile  pyproject.toml
final/01_setup/: type_hint.py
final/05_design_pattern_part2/chain_of_responsibility/: chain_of_responsibility.py
final/05_design_pattern_part2/prototype/: prototype.py
final/05_design_pattern_part2/state/: state.py
final/06_design_pattern_part3/interpreter/: interpreter.py
final/06_design_pattern_part3/mediator/: mediator.py
final/06_design_pattern_part3/memento/: memento.py
final/06_design_pattern_part3/visitor/: visitor.py
python-desgin-pattern/03_solid_principle/dependency_inversion/: bad_example_1.py
python-desgin-pattern/03_solid_principle/interface_segregation/: bad_example_2.py
python-desgin-pattern/03_solid_principle/liskov_substitution/: good_example_3.py  test_bad_example_3.py
python-desgin-pattern/03_solid_principle/open_closed/: good_example_4.py
python-desgin-pattern/03_solid_principle/single_responsibility/: good_example_5.py
python-desgin-pattern/04_design_pattern_part1/iterator/: iterator.py
python-desgin-pattern/04_design_pattern_part1/singleton/: singleton.py
python-desgin-pattern/05_design_pattern_part2/bridge/: bridge.py
python-desgin-pattern/05_design_pattern_part2/builder/: builder.py
python-desgin-pattern/05_design_pattern_part2/chain_of_responsibility/: chain_of_responsibility.py
python-desgin-pattern/05_design_pattern_part2/proxy/: proxy.py
python-desgin-pattern/05_design_pattern_part2/state/: state.py
working/01_setup/: type_hint.py
(+24 files in other folders)
